@@ -1,57 +1,0 @@
-# 
-# jMax
-# Copyright (C) 1994, 1995, 1998, 1999 by IRCAM-Centre Georges Pompidou, Paris, France.
-# 
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; either version 2
-# of the License, or (at your option) any later version.
-# 
-# See file LICENSE for further informations on licensing terms.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-# 
-# Based on Max/ISPW by Miller Puckette.
-#
-# Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell.
-
-##
-## Flags for an O2 with r10k
-##
-
-VENDOR := sgi
-OS_TYPE := unix
-
-SYSTEM_CFLAGS := -mips4 -n32 -r10000 -LANG:restrict
-SYSTEM_LDFLAGS := -mips4 -n32 
-SYSTEM_SOFLAGS := -mips4 -n32
-
-SYSTEM_OPT_CFLAGS := -O3 -OPT:roundoff=3:IEEE_arithmetic=3:alias=typed:fast_io=ON:Olimit=0 -TARG:platform=ip32_10k:processor=r10000 -float_const -INLINE:=ON:dfe=ON  -LNO:opt=1 
-
-SYSTEM_OPT_LDFLAGS = -O3
-
-SYSTEM_OPT_SOFLAGS = 
-
-ARCH_CFLAGS := $(SYSTEM_CFLAGS) -DSGI -DIRIX6_3
-ARCH_LDFLAGS = $(SYSTEM_LDFLAGS)
-ARCH_SOFLAGS = $(SYSTEM_SOFLAGS)
-
-ARCH_OPT_CFLAGS := $(SYSTEM_OPT_CFLAGS)
-ARCH_OPT_LDFLAGS = $(SYSTEM_OPT_LDFLAGS)
-ARCH_OPT_SOFLAGS = $(SYSTEM_OPT_SOFLAGS)
-
-##
-## FTS specific declarations
-##
-
-FTS_SYS_LIBS = -laudio  -lmd -laudiofile -laudioutil -lmalloc  -lm -lfpe -lpthread
-FTS_ARCH_LIBS = $(LIBDIR)/libPortableVecLib.a
-
-FTS_USER_LIBS_FLAGS = -all
