@@ -1,49 +1,0 @@
-# 
-# jMax
-# Copyright (C) 1994, 1995, 1998, 1999 by IRCAM-Centre Georges Pompidou, Paris, France.
-# 
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; either version 2
-# of the License, or (at your option) any later version.
-# 
-# See file LICENSE for further informations on licensing terms.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-# 
-# Based on Max/ISPW by Miller Puckette.
-#
-# Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell.
-
-
-
-VENDOR := solaris2
-OS_TYPE := solaris2
-
-SYSTEM_SOFLAGS := -G
-
-LD_ALL_FLAG =
-LD_NONE_FLAG = 
-CC_ALL_FLAG =
-CC_NONE_FLAG = 
-
-ARCH_CFLAGS := $(SYSTEM_CFLAGS) -DSOLARIS2 -KPIC -I/usr/demo/SOUND/include -I/opt/home/soldev/src/STtools/include
-ARCH_LDFLAGS := $(SYSTEM_LDFLAGS) `sed -e 's/^/-u /' $(ROOTDIR)/Makefiles/exports_file`
-ARCH_SOFLAGS := $(SYSTEM_SOFLAGS)
-ARCH_OPT_CFLAGS := -fast 
-ARCH_OPT_LDFLAGS := -fast
-ARCH_OPT_SOFLAGS := -fast
-
-##
-## FTS specific declarations
-##
-
-FTS_SYS_LIBS =  -Xa -L/usr/demo/SOUND/lib -laudio -lm -L/usr/lib -ldl -lnsl -lsocket
-FTS_ARCH_LIBS = $(LIBDIR)/libPortableVecLib.a
